# instagram-semantic-ios

./: .gitignore  README.md
InstaSemanticSearch/: Config.swift  ContentView.swift  InstaSemanticSearchApp.swift  Item.swift
InstaSemanticSearch.xcodeproj/: project.pbxproj
InstaSemanticSearch/Models/: InstagramUser.swift
InstaSemanticSearch/Services/: APIService.swift
InstaSemanticSearch/ViewModels/: AppViewModel.swift  ProfileViewModel.swift  SearchViewModel.swift
InstaSemanticSearch/Views/: AccountListSheetView.swift  HomeView.swift  InstagramLoginView.swift  LoginView.swift  OnboardingView.swift  ProfileOverlayView.swift  SearchSheetView.swift
InstaSemanticSearchTests/: InstaSemanticSearchTests.swift
InstaSemanticSearchUITests/: InstaSemanticSearchUITests.swift  InstaSemanticSearchUITestsLaunchTests.swift
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: dependencies.py  main.py
backend/app/db/: models.py
backend/app/routers/: auth.py  graph.py  search.py
backend/app/schemas/: auth.py
backend/app/services/: account_store.py  auth_tokens.py  crypto.py  deep_search.py  embeddings.py  enrichment.py  graph_engine.py  instagram_client.py  model_orchestrator.py  openrouter_client.py  query_router.py  search_service.py  sync_scheduler.py  vlm.py
backend/app/services/ai/: embeddings.py  vlm.py
backend/app/services/instagram/: __init__.py  client.py
backend/app/services/search/: deep_search.py
backend/app/services/storage/: account_store.py
ios/: .gitignore  README.md
ios/InstaSemanticSearch/: Config.swift  ContentView.swift
(+15 files in other folders)
